--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,20 @@ p {
         font-size: 1.5em;
         margin-top: 30px;
     }
+
+
+
+/* Images*/
+
+
+.project-image{
+    display: block;
+    margin: 0 auto;
+}
+
+.about-image{
+    display: block;
+    margin: 0 auto;
+}
+
+
