--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,13 @@ h2 {
 h3 {
     font-size: 2em;
     margin-bottom: 15px;
-    color: #6B8E23
-    ;
+    color: #6B8E23;
+}
+
+h4 {
+    font-size: 1.2em;
+    margin-bottom: 15px;
+    color: #6B8E23;
 }
 p {
     font-size: 1.2em;
